[gd_scene load_steps=5 format=3 uid="uid://b2j8h5k7m4oap"]

[ext_resource type="Script" path="res://scripts/ui/scientist_panel.gd" id="1_scientist_panel"]
[ext_resource type="StyleBox" uid="uid://unique_green_border" path="res://resources/ui/green_border_style.tres" id="2_green_border"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_bg"]
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 1, 0.2, 1)
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_fill"]
bg_color = Color(0.2, 1, 0.2, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0

[node name="ScientistPanel" type="PanelContainer"]
custom_minimum_size = Vector2(140, 180)
script = ExtResource("1_scientist_panel")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ScientistButton" type="Button" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
flat = true

[node name="ImageContainer" type="MarginContainer" parent="VBox/ScientistButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="PlaceholderBG" type="ColorRect" parent="VBox/ScientistButton/ImageContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="PlaceholderBorder" type="Panel" parent="VBox/ScientistButton/ImageContainer/PlaceholderBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_green_border")

[node name="PlaceholderText" type="Label" parent="VBox/ScientistButton/ImageContainer/PlaceholderBG"]
unique_name_in_owner = true
layout_mode = 1
mouse_filter = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "Click to hire
scientist"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ScientistImage" type="TextureRect" parent="VBox/ScientistButton/ImageContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="FireButton" type="Button" parent="VBox/ScientistButton"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 30.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 20
text = "X"

[node name="NameLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "SCIENTIST"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "Not hired"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ProgressContainer" type="VBoxContainer" parent="VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 2

[node name="ProgressLabel" type="Label" parent="VBox/ProgressContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Working..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBox/ProgressContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 16)
layout_mode = 2
max_value = 1.0
value = 0.5
show_percentage = false
theme_override_styles/background = SubResource("StyleBoxFlat_progress_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_progress_fill")

[connection signal="pressed" from="VBox/ScientistButton" to="." method="_on_scientist_button_pressed"]
[connection signal="pressed" from="VBox/ScientistButton/FireButton" to="." method="_on_fire_button_pressed"]
